--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,19 @@
     <meta charset="utf-8">
     <title>Movie Tracker</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" 
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <style>
 
       body {
-        padding: 20px;
+        /* padding: 20px; */
         background-color: #8EC5FC;
         background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
       }
@@ -18,28 +26,54 @@
       }
 
       .form-container {
-        margin-top: 20px;
+        margin-top: 5pox;
+        padding: 20px;
+      }
+
+      #animated-header {
+        text-align: center
       }
     </style>
   </head>
   <body>
-    <div class="header">
-      <h1 id='title'>Movie Tracker</h1>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Movie Tracker</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Watchlist</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+
+
+    <div class="row justify-content-center">
+      <div class="col-md-6 .offset-md-3" id="input-film-column">
+        <div class="form-container d-flex justify-content-center" id="movie-form">
+          <form action="/" method="POST">
+            <div class="form-row align-items-center">
+              <div class="col-auto">
+                <label class="sr-only" for="title">Name</label>
+                <input type="text" class="form-control mb-2" id="findMovieInput" name="title" placeholder="Enter Film Title">
+              </div>
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-2">Submit</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
 
-    <div class="form-container d-flex justify-content-center" id="movie-form">
-      <form action="/" method="POST">
-        <div class="form-row align-items-center">
-          <div class="col-auto">
-            <label class="sr-only" for="title">Name</label>
-            <input type="text" class="form-control mb-2" id="findMovieInput" name="title" placeholder="Enter Film Title">
-          </div>
-          <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-          </div>
-        </div>
-      </form>
-    </div>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
