--- a/views/findMovie.ejs
+++ b/views/findMovie.ejs
@@ -5,11 +5,25 @@
     <title>Movie Tracker</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap" 
+      rel="stylesheet"
+    />  
     <style>
       body {
         padding: 20px;
         background-color: #8EC5FC;
         background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+      }
+
+      .header {
+        font-family: "Source Sans",;
+        font-weight: 700
+      }
+
+      .body-text {
+        font-family: "Roboto"
       }
 
       #page-title {
@@ -50,8 +64,8 @@
     </style>
   </head>
   <body>
-    <div class="header">
-      <h4 id='page-title'>Is this film you want to add?</h4>
+    <div class="container">
+      <h4 class="header" id='page-title'>Is this film you want to add?</h4>
     </div>
 
     <div id="correct-film-container">
@@ -63,10 +77,10 @@
         </div>
   
         <div class="col-4">
-          <p><b>Title:</b> <%= title %></p>
-          <p><b>Director:</b> <%= director %></p>
-          <p><b>Year:</b> <%= year %></p>
-          <p><b>Plot:</b> <%= plot %></p>
+          <p class="body-text"><b>Title:</b> <%= title %></p>
+          <p class="body-text"><b>Director:</b> <%= director %></p>
+          <p class="body-text"><b>Year:</b> <%= year %></p>
+          <p class="body-text"><b>Plot:</b> <%= plot %></p>
         </div>
       </div>
     </div>
