--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap" 
+      rel="stylesheet"
+    />  
     <style>
 
       body {
@@ -21,41 +26,76 @@
         background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
       }
 
-      #title {
-        text-align: center;
+      .main {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        /* bring your own prefixes */
+        transform: translate(-50%, -50%);
       }
+
+      .header {
+        font-family: "Source Sans",;
+        font-weight: 700
+      }
+
+      .body-text {
+        font-family: "Roboto"
+      }
+
 
       .form-container {
-        margin-top: 5pox;
-        padding: 20px;
+        padding: 5px;
       }
 
-      #animated-header {
-        text-align: center
+      #home-page-nav-header {
+        color: white;
       }
+
+      #home-page-watchlist-link {
+        color: white;
+        font-weight: 400;
+        font-size: 1.00em;
+      }
+
+  
     </style>
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Movie Tracker</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Watchlist</a>
-            </li>
-          </ul>
+     <nav class="navabar bg-dark border-bottom border-body">
+      <div class="container-fluid inner-nav-container">
+        <div class="row justify-content-center">
+          <div class="col-6 d-flex align-items-center justify-content-center">
+            <a class="navbar-brand header" id="home-page-nav-header" href="#">Movie Tracker</a>
+            <a class="navbar-brand header" id="home-page-watchlist-link" href="/movies">Watchlist</a>
+         </div>
         </div>
       </div>
-    </nav>
+     </nav>
+
+      <main role="main" class="text-center main">
+        <h1 class="header">Add to Watchlist</h1>
+        <p class="body-text">Type the title of the film you wnat to add to your watchlist</p>
+        <div class="form-container d-flex justify-content-center" id="movie-form">
+          <form action="/" method="POST">
+            <div class="form-row align-items-center">
+              <div class="col-auto">
+                <label class="sr-only" for="title">Name</label>
+                <input type="text" class="form-control mb-2" id="findMovieInput" name="title" placeholder="Enter Film Title">
+              </div>
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-2">Submit</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </main>
+
     
 
 
-    <div class="row justify-content-center">
+    <!-- <div class="row justify-content-center">
       <div class="col-md-6 .offset-md-3" id="input-film-column">
         <div class="form-container d-flex justify-content-center" id="movie-form">
           <form action="/" method="POST">
@@ -71,7 +111,9 @@
           </form>
         </div>
       </div>
-    </div>
+    </div> -->
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
