--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,7 @@
     <meta charset="utf-8">
     <title>Movie Tracker</title>
 
-    <link rel="stylesheet" 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -36,7 +32,8 @@
 
       .header {
         font-family: "Source Sans",;
-        font-weight: 700
+        font-weight: 700;
+        font-size: 1.5em;
       }
 
       .body-text {
@@ -63,25 +60,30 @@
   </head>
   <body>
 
-     <nav class="navabar bg-dark border-bottom border-body">
-      <div class="container-fluid inner-nav-container">
-        <div class="row justify-content-center">
-          <div class="col-6 d-flex align-items-center justify-content-center">
-            <a class="navbar-brand header" id="home-page-nav-header" href="#">Movie Tracker</a>
-            <a class="navbar-brand header" id="home-page-watchlist-link" href="/movies">Watchlist</a>
-         </div>
+     <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid d-flex align-items-center justify-content-center">
+        <a class="navbar-brand" id="home-page-nav-header" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" id="home-page-watchlist-link" aria-current="page" href="/movies">Watchlist</a>
+            </li>
+          </ul>
         </div>
       </div>
      </nav>
 
       <main role="main" class="text-center main">
         <h1 class="header">Add to Watchlist</h1>
-        <p class="body-text">Type the title of the film you wnat to add to your watchlist</p>
+        <p class="body-text">Type the title of the film you want to add to your watchlist</p>
         <div class="form-container d-flex justify-content-center" id="movie-form">
-          <form action="/" method="POST">
-            <div class="form-row align-items-center">
+          <form action="/" method="POST" class="row g-3">
+            <div class="form-row">
               <div class="col-auto">
-                <label class="sr-only" for="title">Name</label>
+                <label class="sr-only visually-hidden" for="title">Film Title</label>
                 <input type="text" class="form-control mb-2" id="findMovieInput" name="title" placeholder="Enter Film Title">
               </div>
               <div class="col-auto">
