--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Movie Tracker</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link 
       href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap" 
@@ -46,6 +46,11 @@
         border-radius: 24% 24% 24% 24% / 45% 44% 41% 40%;
       }
 
+      h5 {
+        font-family: "Source Sans";
+        font-weight: 700
+      }
+
     </style>
   </head>
   <body>
@@ -53,35 +58,19 @@
       <h1 class="header" id='title'>Movies</h1>
     </div>
 
-    <div class="container movies-container">
-      <div class="card movie-card bg-transparent">
-        <div class="row justify-content-center" id="movie-row">
-          <div class="col">
-            <p class="header">Title:</h3>
-            <p class="body-text">Come and See</p>
-          </div>
-          <div class="col">
-            <p class="header">Director:</h3>
-            <p class="body-text">Elem Klimov</p>
-          </div>
-          <div class="col">
-            <p class="header">Year:</h3>
-            <p class="body-text">1985</p>
-          </div>
-          <div class="col">
-            <p class="header">Watched:</h3>
-            <p class="body-text">False</p>
-          </div>
-          <div class="col">
-            <p class="header">Where to watch:</h3>
-            <p class="body-text">Max</p>
-          </div>
+    <div>
+      <div class="row justify-content-center">
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Title</span> Come and See
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Director</span> Elem Klimov
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Year</span> 1985
         </div>
       </div>
-      
     </div>
-
-
 
     <!-- <div class="container movies-container">
       <div class="card">
@@ -107,7 +96,31 @@
         </table>
       </div>
     </div> -->
-    
+
+    <!-- <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">Title</th>
+          <th scope="col">Director</th>
+          <th scope="col">Year</th>
+          <th scope="col">Runtime</th>
+          <th scope="col">Watched</th>
+          <th scope="col">Where To Watch</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% movies.forEach(function(movie){ %>
+          <tr>
+            <th scope="row"><%= movie.title %></th>
+            <th><p class="body-text"><%= movie.director %></p></th>
+            <th><p class="body-text"><%= movie.year %></p></th>
+            <th><p class="body-text"><%= movie.runTime %></p></th>
+            <th><p class="body-text"><%= movie.watched %></p></th>
+            <th><p class="body-text"><%= movie.streaming.join(", ") %></p></th>
+          </tr>
+        <% }); %>
+      </tbody>
+    </table> -->
     
   </body>
 </html>
