--- a/views/findMovie.ejs
+++ b/views/findMovie.ejs
@@ -22,6 +22,11 @@
         font-weight: 700
       }
 
+      label {
+        font-family: "Source Sans",;
+        font-weight: 700
+      }
+
       .body-text {
         font-family: "Roboto"
       }
@@ -61,6 +66,10 @@
         margin-right: 50px;
       }
 
+      #final-form-row {
+        margin-bottom: 10px;
+      }
+
     </style>
   </head>
   <body>
@@ -71,9 +80,7 @@
     <div id="correct-film-container">
       <div class="row justify-content-center">
         <div class="col-4">
-          <div class="container">
-            <img class="rounded float-right" src=<%= poster %> style="max-width:20%;"/>
-          </div>
+            <img class="rounded float-end" src=<%= poster %> style="max-width:20%;"/>
         </div>
   
         <div class="col-4">
@@ -87,56 +94,53 @@
     <div class="line-container">
       <hr>
     </div>
+
+    <div class="add-film-container">
+      <form action="/movies" method="POST">
+        <div class="row">
+          <div class="col">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" name="title" id="title" value="<%= title %>">
+          </div>
+          <div class="col">
+            <label for="title">Director</label>
+            <input type="text" class="form-control" name="director" id="director" value="<%= director %>">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="title">Year</label>
+            <input type="text" class="form-control" name="year" id="year" value="<%= year %>">
+          </div>
+          <div class="col">
+            <label for="title">Plot</label>
+            <input type="text" class="form-control" name="plot" id="plot" value="<%= plot %>">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="title">Country</label>
+            <input type="text" class="form-control" name="country" id="country" value="<%= country %>">
+          </div>
+          <div class="col">
+            <label for="title">Runtime</label>
+            <input type="text" class="form-control" name="runtime" id="runtime" value="<%= runTime %>">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="title">imdbID</label>
+            <input type="text" class="form-control" name="imdbID" id="imdbID" value="<%= imdbID %>">
+          </div>
+          <div class="col" id="final-form-row">
+            <label for="title">Have you watched this film?</label>
+            <input type="text" class="form-control" name="watchedFilm" id="watchedFilm" placeholder="Enter true or false">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Film</button>
+      </form>
+    </div>
     
-   <div class="add-film-container">
-    <form action="/movies" method="POST">
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="title">Title</label>
-          <input type="text" class="form-control" name="title" id="title" value="<%= title %>">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="director">Director</label>
-          <input type="text" class="form-control" name="director" id="director" value="<%= director %>">
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="year">Year</label>
-          <input type="text" class="form-control" name="year" id="year" value="<%= year %>">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="plot">Plot</label>
-          <input type="text-area" class="form-control" name="plot" id="plot" value="<%= plot %>">
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="country">Country</label>
-          <input type="text" class="form-control" name="country" id="country" value="<%= country %>">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="runtime">Runtime</label>
-          <input type="text" class="form-control" name="runtime" id="runtime" value="<%= runTime %>">
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="imdbID">imdbID</label>
-          <input type="text" class="form-control" name="imdbID" id="imdbID" value="<%= imdbID %>">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="watchedFilm">Have you watched this film?</label>
-          <input type="text" class="form-control" name="watchedFilm" id="watchedFilm" placeholder="Enter true or false">
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary">Add Film</button>
-    </form>
-   </div>
-
    <div class="line-container">
     <hr>
   </div>
