--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,14 @@
         transform: translate(-50%, -50%);
       }
 
+      .card-container {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        /* bring your own prefixes */
+        transform: translate(-50%, -50%);
+      }
+
       .header {
         font-family: "Source Sans",;
         font-weight: 700;
@@ -60,64 +68,29 @@
   </head>
   <body>
 
-     <nav class="navbar navbar-expand-lg bg-dark">
-      <div class="container-fluid d-flex align-items-center justify-content-center">
-        <a class="navbar-brand" id="home-page-nav-header" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" id="home-page-watchlist-link" aria-current="page" href="/movies">Watchlist</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-     </nav>
+    <nav class="navbar bg-dark">
+      <div class="container justify-content-center">
+        <a class="navbar-brand header" id="home-page-nav-header">Watchlist Manager</a>
+        <a id="home-page-watchlist-link" href="/movies">Watchlist</a>
+    </nav>
 
-      <main role="main" class="text-center main">
-        <h1 class="header">Add to Watchlist</h1>
-        <p class="body-text">Type the title of the film you want to add to your watchlist</p>
-        <div class="form-container d-flex justify-content-center" id="movie-form">
+    <div class="container card-container d-flex align-items-center justify-content-center">
+      <div class="card text-bg-dark mb-3 text-center">
+        <div class="card-body">
+          <h5 class="header">Add to Watchlist</h5>
           <form action="/" method="POST" class="row g-3">
-            <div class="form-row">
-              <div class="col-auto">
-                <label class="sr-only visually-hidden" for="title">Film Title</label>
-                <input type="text" class="form-control mb-2" id="findMovieInput" name="title" placeholder="Enter Film Title">
-              </div>
-              <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-2">Submit</button>
-              </div>
+            <div class="col-auto">
+              <input type="text" class="form-control mb-2" id="findMovieInput" name="title" placeholder="Enter Film Title">
             </div>
-          </form>
-        </div>
-      </main>
-
-    
-
-
-    <!-- <div class="row justify-content-center">
-      <div class="col-md-6 .offset-md-3" id="input-film-column">
-        <div class="form-container d-flex justify-content-center" id="movie-form">
-          <form action="/" method="POST">
-            <div class="form-row align-items-center">
-              <div class="col-auto">
-                <label class="sr-only" for="title">Name</label>
-                <input type="text" class="form-control mb-2" id="findMovieInput" name="title" placeholder="Enter Film Title">
-              </div>
-              <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-2">Submit</button>
-              </div>
+            <div class="col-auto">
+              <button type="submit" class="btn btn-primary mb-2">Submit</button>
             </div>
           </form>
         </div>
       </div>
-    </div> -->
+    </div>
 
-
-
-
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
