--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -58,19 +58,59 @@
       <h1 class="header" id='title'>Movies</h1>
     </div>
 
-    <div>
-      <div class="row justify-content-center">
-        <div class="col d-flex align-items-center justify-content-center">
-          <span class="badge text-bg-primary">Title</span> Come and See
-        </div>
-        <div class="col d-flex align-items-center justify-content-center">
-          <span class="badge text-bg-primary">Director</span> Elem Klimov
-        </div>
-        <div class="col d-flex align-items-center justify-content-center">
-          <span class="badge text-bg-primary">Year</span> 1985
-        </div>
+    <div class="row justify-content-center">
+      <div class="col">
+        <span class="badge rounded-pill bg-dark">Title: Come and See</span>
+      </div>
+      <div class="col">
+        <span class="badge rounded-pill bg-dark">Director: Elem Klimov</span>
+      </div>
+      <div class="col">
+        <span class="badge rounded-pill bg-dark">Year: 1985</span>
+      </div>
+      <div class="col">
+        <span class="badge rounded-pill bg-dark">Runtime: 140 minutes</span>
+      </div>
+      <div class="col">
+        <span class="badge rounded-pill bg-dark">Watched: false</span>
+      </div>
+      <div class="col">
+        <span class="badge rounded-pill bg-dark">Where to View: The Criterion Channel</span>
       </div>
     </div>
+
+    
+
+    
+
+    <!-- <div>
+      <div class="row justify-content-center">
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Title</span> 
+          <p>Come and See</p>
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Director</span> 
+          <p>Elem Klimov</p>
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Year</span> 
+          <p>1985</p>
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Runtime</span> 
+          <p>140 minutes</p>
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Watched</span> 
+          <p>false</p>
+        </div>
+        <div class="col d-flex align-items-center justify-content-center">
+          <span class="badge text-bg-primary">Where to Watch</span> 
+          <p>The Criterion Channel</p>
+        </div>
+      </div>
+    </div> -->
 
     <!-- <div class="container movies-container">
       <div class="card">
