--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <title>Movie Tracker</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link 
+      rel="stylesheet" 
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+      crossorigin="anonymous"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link 
       href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200;300;400;500;600;700;800;900&family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap" 
@@ -12,14 +17,27 @@
     />  
     <style>
       body {
-        padding: 20px;
         background-color: #8EC5FC;
         background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
       }
 
       .header {
         font-family: "Source Sans",;
+        font-weight: 700;
+        font-size: 1.5em;
+      }
+
+      .table-category {
+        font-family: "Source Sans",;
         font-weight: 700
+      }
+
+      .table-value {
+        font-family: "Roboto"
+      }
+
+      #category-row {
+        padding: 10px;
       }
 
       .body-text {
@@ -34,50 +52,83 @@
         margin-top: 20px;
       }
 
-      .movies-container {
+      #watchlist {
         margin-top: 20px;
+        border: 2px solid;
+        border-radius: 16px;
       }
 
-      #movie-row {
-        padding: 20px;
+      #watchlist-nav-header {
+        color: white;
       }
 
-      .movie-card {
-        border-radius: 24% 24% 24% 24% / 45% 44% 41% 40%;
-      }
-
-      h5 {
-        font-family: "Source Sans";
-        font-weight: 700
+      #homepage-link {
+        color: white;
+        font-weight: 400;
+        font-size: 1.00em;
       }
 
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1 class="header" id='title'>Movies</h1>
+    <nav class="navbar bg-dark">
+      <div class="container justify-content-center">
+        <a class="navbar-brand header" id="watchlist-nav-header">Film Watchlist</a>
+        <a id="homepage-link" href="/">Homepage</a>
+    </nav>
+
+
+
+    <div class="container text-center" id="watchlist">
+      <div class="row align-items-center" id="category-row">
+        <div class="col table-category">
+          TITLE
+        </div>
+        <div class="col table-category">
+          DIRECTOR
+        </div>
+        <div class="col table-category">
+          YEAR
+        </div>
+        <div class="col table-category">
+          RUNTIME
+        </div>
+        <div class="col table-category">
+          WATCHED
+        </div>
+        <div class="col table-category">
+          WHERE TO VIEW
+        </div>
+      </div>
+      <hr>
+      <% movies.forEach(function(movie){ %>
+        <div class="row align-items-center">
+          <div class="col table-value">
+            <%= movie.title %>
+          </div>
+          <div class="col table-value">
+            <%= movie.director %>
+          </div>
+          <div class="col table-value">
+            <%= movie.year %>
+          </div>
+          <div class="col table-value">
+            <%= movie.runTime %>
+          </div>
+          <div class="col table-value">
+            <%= movie.watched %>
+          </div>
+          <div class="col table-value">
+            <%= movie.streaming.join(", ") %>
+          </div>
+        </div>
+        <div class="row">
+          
+        </div>
+        <hr>
+      <% }); %>
     </div>
 
-    <div class="row justify-content-center">
-      <div class="col">
-        <span class="badge rounded-pill bg-dark">Title: Come and See</span>
-      </div>
-      <div class="col">
-        <span class="badge rounded-pill bg-dark">Director: Elem Klimov</span>
-      </div>
-      <div class="col">
-        <span class="badge rounded-pill bg-dark">Year: 1985</span>
-      </div>
-      <div class="col">
-        <span class="badge rounded-pill bg-dark">Runtime: 140 minutes</span>
-      </div>
-      <div class="col">
-        <span class="badge rounded-pill bg-dark">Watched: false</span>
-      </div>
-      <div class="col">
-        <span class="badge rounded-pill bg-dark">Where to View: The Criterion Channel</span>
-      </div>
-    </div>
 
     
 
@@ -161,7 +212,7 @@
         <% }); %>
       </tbody>
     </table> -->
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
 
