--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -68,6 +68,10 @@
         font-size: 1.00em;
       }
 
+      .dropdown-container {
+        margin-top: 5px;
+      }
+
     </style>
   </head>
   <body>
@@ -122,9 +126,38 @@
             <%= movie.streaming.join(", ") %>
           </div>
         </div>
-        <div class="row">
-          
+        <div class="row justify-content-end dropdown-container">
+          <div class="col-2">
+            <div class="dropdown">
+              <button class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Update Film
+              </button>
+              <ul class="dropdown-menu">
+                <li>
+                  <!-- <a class="dropdown-item" href="#">Mark as watched</a> -->
+                  <form action="/movies" method="PUT">
+                    <button type="submit" class="btn">Mark as watched</button>
+                  </form>
+                </li>
+                <li>
+                  <!-- <a class="dropdown-item" href="#">Remove from watchlist</a> -->
+                  <form action="/movies" method="PUT">
+                    <button type="submit" class="btn">Remove from watchlist</button>
+                  </form>
+                </li>
+                <li>
+                  <!-- <a class="dropdown-item" href="#">Update streaming platforms</a> -->
+                  <form action="/movies" method="PUT">
+                    <button type="submit" class="btn">Update streaming platforms</button>
+                  </form>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
+        
+        
+       
         <hr>
       <% }); %>
     </div>
